public-testnet/parachains/statemine/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: statemine-basilisk-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: parachain-statemine
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=4000
    alb.ingress.kubernetes.io/auth-session-timeout: '86400'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":443}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: '80'
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=600
    alb.ingress.kubernetes.io/certificate-arn:  arn:aws:acm:eu-west-1:601305236792:certificate/7f176516-6b80-4ad6-8a05-8b69b8bac3a4
  labels:
    app: statemine-public-rpc-expose
spec:
  rules:
    - host: statemine-parachain.hydration.cloud
      http:
        paths:
          - path: /ws/
            backend:
              serviceName: statemine-public-rpc-svc
              servicePort: 80
